fixtures/ast/errors/or_else_handler/source.able
do {
  raise "boom"
}! else {
  | err |
  "handled"
}
